staging new home page

--- a/index.new.html
+++ b/index.new.html
@@ -47,14 +47,14 @@
       <div id="u1023"><!-- simple frame --></div>
       <div class="clearfix" id="pu1039-5"><!-- column -->
        <div class="Perspectives-Headline-Link clearfix colelem" id="u1039-5"><!-- content -->
-        <p id="u1039-3"><a class="nonblock" href="http://jgc.stanford.edu" target="_blank"><span id="u1039">Gardner Perspectives</span></a></p>
+        <p id="u1039-3"><a class="nonblock" href="http://jgc.stanford.edu/about_jgc/mission.html" target="_blank"><span id="u1039">Gardner Perspectives</span></a></p>
        </div>
        <div class="clearfix colelem" id="u1040-16"><!-- content -->
-        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="http://gardnercenter.stanford.edu/resources/reports/Berkeley004%20Raising%20the%20bar4%20Executive%20Summary.pdf" target="_blank">CALIFORNIA’S <br/>CONTINUATION HIGH SCHOOLS</a></p>
+        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="http://gardnercenter.stanford.edu/resources/policy_fact_sheets/Absence_Interventions_PFS.pdf" target="_blank">STEPS TO ADDRESSING <br/>TRUANCY & CHRONIC ABSENTEEISM</a></p>
         <p id="u1040-7">&nbsp;</p>
-        <p id="u1040-9">by Jorge Ruiz de Velasco,</p>
-        <p id="u1040-11">Associate Director</p>
-        <p><br/>California’s approximately 500 continuation high schools are estimated to serve more than 115,000 California high school students each year—a number that approaches almost 10 percent of all high school students and as many as one of every seven high school seniors. Than 115,000 California high school students each year—a number that approaches almost 10 percent of all high school students and as many as one.</p>
+        <p id="u1040-9">A Policy Fact Sheet</p>
+        <p id="u1040-11"></p>
+        <p><br/>Addressing chronic absenteeism is a continuous process that involves understanding its prevalence and identifying characteristics of chronically absent students, then identifying, applying, and tracking interventions, assessing their effectiveness, and adjusting them accordingly. A core piece of addressing absenteeism is creating a data system which sits at the center of all subsquent steps in the process.</p>
        </div>
       </div>
      </div>
@@ -179,7 +179,7 @@
       </ul>
      </div>
      <div class="shadow clip_frame grpelem" id="u7712"><!-- image -->
-      <img class="block" id="u7712_img" src="images/fromdatatoaction.gif" alt="" width="81" height="122"/>
+      <img class="block" id="u7712_img" src="images/yellcover.jpg" alt="" width="81" height="122"/>
      </div>
      <div class="grpelem" id="u1020"><!-- simple frame --></div>
      <div class="grpelem" id="u1021"><!-- simple frame --></div>
@@ -188,7 +188,7 @@
       <p>Read Our Brochure:</p>
      </div>
      <div class="clearfix grpelem" id="u1038-11"><!-- content -->
-      <p class="ts-community-Headline-Link" id="u1038-4"><a class="nonblock" href="http://jgc.stanford.edu">#communitycollabs</a></p>
+      <p class="ts-community-Headline-Link" id="u1038-4"><a class="nonblock" href="https://twitter.com/search?q=%23communitycollabs&src=typd&f=realtime">#communitycollabs</a></p>
       <p class="ts-community-Subhead-Link" id="u1038-9"><span id="u1038-5">Across the country, community collaboratives are partnering with researchers use data to improve the lives of youth.</span>&nbsp;<span id="u1038-7">#communitycollabs</span>&nbsp;is our town hall to address the great potential, as well as the challenges, of working together.</p>
      </div>
      <div class="clearfix grpelem" id="u1042-4"><!-- content -->
@@ -198,26 +198,27 @@
       <p><a class="nonblock" href="http://gardnercenter.stanford.edu/resources/publications.html"><span id="u1037">Publications</span></a></p>
      </div>
      <div class="clearfix grpelem" id="u1181-9"><!-- content -->
-      <p class="Publications-Subhead-Link" id="u1181-3"><a class="nonblock" href="resources/publications.html">Book caption goes here. Caption headlines are always in orange.</a></p>
-      <p id="u1181-7">Say something about the book here.You can say enough to fill this little block of space. Or not. <span id="u1181-5">From Data to Action</span>&nbsp;is the author's second book, etc., etc.</p>
+      <p class="Publications-Subhead-Link" id="u1181-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/YELL.html">Youth Engaged in Leadership and Learning</a></p>
+      <p id="u1181-7">This curriculum is available for free download to anyone interested in training and engaging youth as partners and leaders within their communities. <span id="u1181-5"></p>
      </div>
      <div class="shadow clearfix grpelem" id="u1046"><!-- column -->
       <div class="Events-Headline-Link clearfix colelem" id="u1047-5"><!-- content -->
        <p id="u1047-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/news/news.html" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="http://edpov.stanford.edu/events/prudence-carter-and-sean-reardon-workshop-poverty-inequality-and-education" target="_blank">Prudence Carter: The Workshop on Poverty, Inequality, and Education</a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="https://events.stanford.edu/events/424/42427/" target="_blank">SCOPE & the Gardner Center present a Brown Bag Seminar with Dorothy Steele & Becki Cohn-Vargas</a></p>
        <p>&nbsp;</p>
-       <p>DATE: Tuesday, October 8, 2013&nbsp; TIME: 5:15 pm — 7:00 pm</p>
+       <p>DATE: April 14, 2014&nbsp; TIME: 4:00 pm — 5:30 pm</p>
        <p>LOCATION: CERAS Learning Hall, Stanford University</p>
+	
        <p id="u1182-9">&nbsp;</p>
       </div>
      </div>
      <div class="grpelem" id="u1022"><!-- simple frame --></div>
      <div class="clearfix grpelem" id="u7466-9"><!-- content -->
-      <p id="u7466-2"><span id="u7466">RESEARCH HIGHLIGHTS</span></p>
-      <p class="Main-Headline-Link" id="u7466-5"><a class="nonblock" href="/resources/publications/BtSIssueBrief10.3.13.pdf" target="_blank"><span id="u7466-3">A New Approach to Placement Criteria</span></a></p>
-      <p id="u7466-7">In a typical year, approximately 90% of Unified School District graduates who enroll at City College of San Francisco (CCSF) are placed into remedial English. With the goal of improving completion rates at CCSF by reducing remediation, the lorem ipsum dolor set lorem ipsum dolor set Gardner Center and Bridge to Success have partnered to use data to identify criteria other than placement tests that would enable students to streamline their path to college&#45;level coursework and graduation. In a typical year, approximately 90% of San Francisco lorem ipsum dolor set.</p>
+      <p id="u7466-2"><span id="u7466">NEWS</span></p>
+      <p class="Main-Headline-Link" id="u7466-5"><a class="nonblock" href="https://ed.stanford.edu/news/stanfords-gardner-center-partners-calif-schools-new-reform-plan" target="_blank"><span id="u7466-3">California Office to Reform Education</span></a></p>
+      <p id="u7466-7">Through the California Office to Reform Education, the Gardner Center is helping eight of California's largest school districts to adopt new measures of success to improve student learning and close achievement gaps. The work with the districts comes after each was granted an unprecedented NCLB waiver, and makes the Gardner Center the data and analysis hub for one of the most closely watched school reform efforts in the country.</p>
      </div>
      <div class="clearfix grpelem" id="u7524"><!-- group -->
       <div class="grpelem" id="u7504"><!-- custom html -->
@@ -227,16 +228,16 @@
       <a class="nonblock nontext clip_frame grpelem" id="u7495" href="https://twitter.com/gardnercenter"><!-- image --><img class="block" id="u7495_img" src="images/follow-from-web-u7495.jpg" alt="" width="80" height="30"/></a>
      </div>
      <div class="clearfix grpelem" id="u8392-10"><!-- content -->
-      <p id="u8392-2"><span id="u8392">NEWS</span></p>
-      <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="http://annenberginstitute.org/publication/college-readiness-indicator-systems-voices-urban-education-38" target="_blank"><span id="u8392-3">College Readiness Indicator Systems</span></a></p>
-      <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="images/graciela-u8409.jpg" alt="" width="105" height="150"/></span></span></span>When students are not in school, they miss the lorem ipsum dolor set opportunity to grow academically, socially, and emotionally. These skills are critical for continued success in school, in the community, and onward into adulthood. At the request of the Redwood City 2020 collaborative, the Gardner Center conducted a linked&#45;data analysis to explore the causes consequences that are present the lorem ipsum dolor set lorem ipsum dolor set in the community.</p>
+      <p id="u8392-2"><span id="u8392">RESEARCH HIGHLIGHTS</span></p>
+      <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/pfa.html" target="_blank"><span id="u8392-3">San Mateo County Preschool For All</span></a></p>
+      <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="images/team/Monika2.jpg" alt="" width="105" height="150"/></span></span></span>Since 2011, the Gardner Center has examined school-based outcomes for San Mateo County <i>Preschool for All</i> students who went on to attend elementary school in Redwood City School District. The latest study follows these students through third grade, providing a complete look at the PreK to third grade experiences of children who participated in San Mateo County's high-quality preschool program.</p>
      </div>
      <div class="clip_frame grpelem" id="u9534" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="21" data-mu-ie-matrix-dy="-21"><!-- image -->
       <img class="block" id="u9534_img" src="images/red-circle.png" alt="" width="113" height="70"/>
      </div>
      <div class="pointer_cursor PDF-Download-Link clearfix grpelem" id="u9542-5"><!-- content -->
-      <a class="block" target="_blank" href="http://www.jacquelinejonesdesign.com"></a>
-      <p><a class="nonblock" href="http://www.jacquelinejonesdesign.com" target="_blank">Click here for PDF version</a></p>
+      <a class="block" target="_blank" href="http://www.flipsnack.com/7E655CF569B/ftmedaya"></a>
+      <p><a class="nonblock" href="http://www.flipsnack.com/7E655CF569B/ftmedaya" target="_blank">Click here for PDF version</a></p>
      </div>
      <div class="grpelem" id="u1043"><!-- custom html -->
       <iframe width="328" height="210" src="http://www.youtube.com/embed/2eBptnf-YW0?rel=0" frameborder="0"></iframe>
