--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <p><a class="nonblock" href="http://gardnercenter.stanford.edu/resources/publications.html"><span id="u1037">Publications</span></a></p>
      </div>
      <div class="clearfix grpelem" id="u1181-9"><!-- content -->
-      <p class="Publications-Subhead-Link" id="u1181-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/YELL.html">Youth Engaged in Leadership and Learning</a></p>
+      <p class="Publications-Subhead-Link" id="u1181-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/yell.html">Youth Engaged in Leadership and Learning</a></p>
       <p id="u1181-7">This curriculum is available for free download to anyone interested in training and engaging youth as partners and leaders within their communities. <span id="u1181-5"></p>
      </div>
      <div class="shadow clearfix grpelem" id="u1046"><!-- column -->
