--- a/index.new.html
+++ b/index.new.html
@@ -237,7 +237,7 @@
      </div>
      <div class="pointer_cursor PDF-Download-Link clearfix grpelem" id="u9542-5"><!-- content -->
       <a class="block" target="_blank" href="http://www.flipsnack.com/7E655CF569B/ftmedaya"></a>
-      <p><a class="nonblock" href="http://www.flipsnack.com/7E655CF569B/ftmedaya" target="_blank">Click here for PDF version</a></p>
+      <p><a class="nonblock" href="/resources/publications/brochure-12-13-12.pdf"  target="_blank">Click here for PDF version</a></p>
      </div>
      <div class="grpelem" id="u1043"><!-- custom html -->
       <iframe width="328" height="210" src="http://www.youtube.com/embed/2eBptnf-YW0?rel=0" frameborder="0"></iframe>
