--- a/our_work/content-yell.html
+++ b/our_work/content-yell.html
@@ -70,7 +70,7 @@
    
 <br>
 <span class="content-bold">What is YELL?</span>
-<p>YELL is a set of curricular resources available to anyone interested in training and engaging youth as partners and leaders within their communities. The JGC’s YELL Handbook can help you to:</p>
+<p>YELL is a set of curricular resources available to anyone interested in training and engaging youth as partners and leaders within their communities. The Gardner Center’s YELL Handbook can help you to:</p>
 <br>
 <ul>
 <li>Embed youth leadership training in authentic, meaningful projects that youth define and implement;</li>
@@ -85,12 +85,12 @@
 
 
 <span class="content-bold">YELL History and Development</span>
-<p>The JGC initiated YELL in 2000 as a nine month after school pilot-program that trained 15 eighth grade students as community researchers, advisors, and socially conscious leaders. With JGC program staff, embedded researchers, school and community partners, and youth themselves contributing to program development, YELL expanded to include 350 middle school and high school youth in two Bay Area communities over the next six years. In 2006, JGC transitioned YELL program leadership to schools and community based organizations in Redwood City and West Oakland. While the JGC no longer runs YELL programs directly, the JGC embeds the YELL approach and curriculum in many of its community-based projects.</p> 
+<p>The Gardner Center initiated YELL in 2000 as a nine month after school pilot-program that trained 15 eighth grade students as community researchers, advisors, and socially conscious leaders. With Gardner Center program staff, embedded researchers, school and community partners, and youth themselves contributing to program development, YELL expanded to include 350 middle school and high school youth in two Bay Area communities over the next six years. In 2006, the Gardner Center transitioned YELL program leadership to schools and community based organizations in Redwood City and West Oakland. While the Gardner Center no longer runs YELL programs directly, the Gardner Center embeds the YELL approach and curriculum in many of its community-based projects.</p> 
 <br>
 
 
 <span class="content-bold">Positive Outcomes for Youth, Adults, and Communities</span>
-<p>The JGC researched the impacts of YELL on participating youth, adults and settings. Research highlights three important ways that YELL promotes youth leadership skills: (1) fostering strong communication skills by valuing young people’s ideas and opinions; (2) encouraging analytic thinking through a research-based approach to social change; and (3) creating multiple opportunities for positive community involvement. The combination of these three leadership skills is essential for YELL’s success with young people. Adults and communities also directly benefit from the program. Adults develop relationships and partnerships with young people, knowledge of youth strengths, and skills to support youth as contributors to community solutions. Communities benefit from youth driven data and recommendations for decision-making, engaged and competent youth, and youth and adults who can work together on shared interests and agendas.</p>
+<p>The Gardner Center researched the impacts of YELL on participating youth, adults and settings. Research highlights three important ways that YELL promotes youth leadership skills: (1) fostering strong communication skills by valuing young people’s ideas and opinions; (2) encouraging analytic thinking through a research-based approach to social change; and (3) creating multiple opportunities for positive community involvement. The combination of these three leadership skills is essential for YELL’s success with young people. Adults and communities also directly benefit from the program. Adults develop relationships and partnerships with young people, knowledge of youth strengths, and skills to support youth as contributors to community solutions. Communities benefit from youth driven data and recommendations for decision-making, engaged and competent youth, and youth and adults who can work together on shared interests and agendas.</p>
 <br>
 <span class="content-bold">YELL Publications</span><br>
 <br>
