--- a/our_work/content-research.html
+++ b/our_work/content-research.html
@@ -21,6 +21,7 @@
            <h1 class="content-text-header">C</h1>
 		<ul style="list-style: none;">
 			<li><a href="alt-ed.html">California Alternative Education Research Project</a></li>
+	<li><a href="core.html">California Office to Reform Education (CORE)</a></li>
 			<li><a href="cris.html">College Readiness Indicators Systems (CRIS)</a></li>
 			<li><a href="cydi.html">Community Youth Development Initiative (CYDI)</a><li>
 			<li><a href="acad_soc_emo_devt.html">Connecting Academic with Social and Emotional Development</a></li>
@@ -94,6 +95,7 @@
 			<li><a href="community_schools_eval.html">Redwood City Community Schools Evaluation</a></li>
 			<li><a href="community_schools_qual_eval.html">Redwood City Community Schools Qualitative Evaluation</a></li>
 			<li><a href="/our_work/prevention_partnership.html">Redwood City-North Fair Oaks Prevention Partnership</a></li>
+<li><a href="/our_work/roadtripnation.html">Roadtrip Nation Implementation Study</a></li>
 		</ul><br>
 <hr class="short-rule">
            <h1 class="content-text-header">S</h1>
