--- a/index.new.html
+++ b/index.new.html
@@ -206,10 +206,10 @@
        <p id="u1047-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/news/news.html" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="https://events.stanford.edu/events/424/42427/" target="_blank">SCOPE & the Gardner Center present a Brown Bag Seminar with Dorothy Steele & Becki Cohn-Vargas</a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="https://tedx.stanford.edu/2014" target="_blank">TEDxStanford</a></p>
        <p>&nbsp;</p>
-       <p>DATE: April 14, 2014&nbsp; TIME: 4:00 pm — 5:30 pm</p>
-       <p>LOCATION: CERAS Learning Hall, Stanford University</p>
+       <p>DATE: May 10, 2014&nbsp; TIME: 11:00 am — 6:30 pm</p>
+       <p>LOCATION: CEMEX Auditorium, Stanford University</p>
 	
        <p id="u1182-9">&nbsp;</p>
       </div>
