--- a/our_work/content-research-topic.html
+++ b/our_work/content-research-topic.html
@@ -9,9 +9,11 @@
 <br>                                               
                                              
 <span class="content-bold">College Readiness</span>
-<ul>	
+<ul>
+<li><a href="/our_work/core.html">California Office to Reform Education (CORE)</a></li>		
 <li><a href="/our_work/cris.html">College Readiness Indicators Systems (CRIS)</a></li>	
-<li><a href="/our_work/okf.html">Oakland PASS 2 Program Evaluation</a></li>	
+<li><a href="/our_work/okf.html">Oakland PASS 2 Program Evaluation</a></li>
+<li><a href="/our_work/roadtripnation.html">Roadtrip Nation Implementation Study</a></li>
 <li><a href="/our_work/bts.html">San Francisco Bridge to Success</a></li>		
 </ul>
 <br>	
