typo fix of subsequent

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p id="u1040-7">&nbsp;</p>
         <p id="u1040-9">A Policy Fact Sheet</p>
         <p id="u1040-11"></p>
-        <p><br/>Addressing chronic absenteeism is a continuous process that involves understanding its prevalence and identifying characteristics of chronically absent students, then identifying, applying, and tracking interventions, assessing their effectiveness, and adjusting them accordingly. A core piece of addressing absenteeism is creating a data system which sits at the center of all subsquent steps in the process.</p>
+        <p><br/>Addressing chronic absenteeism is a continuous process that involves understanding its prevalence and identifying characteristics of chronically absent students, then identifying, applying, and tracking interventions, assessing their effectiveness, and adjusting them accordingly. A core piece of addressing absenteeism is creating a data system which sits at the center of all subsequent steps in the process.</p>
        </div>
       </div>
      </div>
