--- a/our_work/content-cris.html
+++ b/our_work/content-cris.html
@@ -4,7 +4,7 @@
 
 
         <div class="jgc-content-feature-item-left">
-<h1 class="title-page-header-big-left">Tri-Level College Readiness Indicator Systems (CRIS)</h1>
+<h1 class="title-page-header-big-left">College Readiness Indicator Systems (CRIS)</h1>
 
 <div class="right-side-with-video"> <!--start video display-->
    <iframe class="youtube-player" type="text/html" width="250" src="http://www.youtube.com/embed/GQAm4JDL-wc" allowfullscreen frameborder="0">
@@ -43,32 +43,36 @@
 
 <br><br><br> <!---spacing under title-->
 
-<p>Education leaders across the country are confounded by a growing phenomenon:  too many students are not college ready when they leave high school.  Although indicators exist to identify students at-risk of dropping out of high school, few indicators of students’ college readiness are currently in place, and few districts have linked indicators to practices and policies in ways that would enable action to create meaningful, lasting change. </p>
+<p>Educators nationwide confront a troubling phenomenon: increasingly, students leave high school unready for college, as evidenced by high rates of placement into remedial courses and low rates of college completion. Many students also lack either the attitudes or skills essential to succeed in a postsecondary setting, or knowledge of how to apply to, finance, and navigate college. Moreover, other capable students never apply to college because they are unaware of opportunities, didn't not take the necessary coursework, or did not imagine college in their futures. These realities highlight a fundamental distinction: there is more to college readiness than college eligibility. The gap between college eligibility and college readiness raises concerns that students' potential—and their potential contribution to society—will be unrealized.</p>
 
  
 <br>
-<span class="content-bold">Features of Tri-Level College Readiness Indicator Systems (CRIS)</span>
-
-<p>The groundbreaking Tri-Level College Readiness Indicator Systems (CRIS) initiative will develop and study the implementation of a system of signals and supports designed to significantly increase the readiness of students to enter and succeed in college.  The CRIS initiative builds upon and enhances existing early warning systems (EWS) in districts because it features the following:</p>
+<p>In 2011, the Bill & Melinda Gates Foundation launched the College Readiness Indicator Systems (CRIS) intiative, bringing together three research partners—the John W. Gardner Center for Youth and Their Communities at Stanford University, the Annenberg Institute for School Reform at Brown University, and the University of Chicago Consortium on Chicago School Research—and four urban districts (Dallas Independent School District, Pittsburgh Public Schools, San Jose Unified School District, and the School District of Philadelphia) and one school support network (New Visions for Public Schools in New York City)—to develop and study the implementation of a system of indicators and supports designed to significantly increase students' readiness to enter and succeed in college.</p>
 <br>
-                                       
+<span class="content-bold">Dimensions of College Readiness: Beyond GPA & Test Scores</span>
+<br>
+<p>With the aim of providing districts with resources to help focus their efforts to build an effective indicator system, the CRIS approach goes beyond the goal of high school graduation to target factors directly relevant to college readiness and success, in particular:</p>
+<br>
 <ul>
-<li>Indicators that focus beyond the goal of high school graduation to target factors directly relevant to college readiness and success, in particular students’ academic preparedness, which refers to key academic content knowledge and skills and key cognitive strategies needed to succeed in doing college-level work; academic tenacity, which is defined by the underlying beliefs and attitudes (such as motivation and aspiration) and accompanying academic behaviors that drive student achievement; and college knowledge, which is the knowledge base and contextual skills that enable students to successfully access college and move through the system once they arrive.
-
-<li>A tri-level approach that utilizes college readiness indicators and informs action at the individual, setting and system levels:</li>
-<ul>
-<li>Individual Level:  students’ personal progress toward college readiness (e.g., courses and credits, study skills, persistence, expectations for future, knowledge about college requirements and choices).</li>
-
-<li>Setting Level:  the resources and opportunities for students provided by a program, classroom or school (e.g., teachers’ efforts to push students to high levels of academic performance, college-going culture and resources, instructional coherence and rigor).</li>
-<li>System Level:  the policy and funding infrastructure that impacts school contexts, student programs and college readiness supports (e.g., district-level resources for school-level counseling, professional development for administrators and teachers on establishing supports for college-going, resources to support data generation).</li>
+<li><b>academic preparedness</b>, the key academic content knowledge and skills and key cognitive strategies needed to succeed in doing college-level work</li>
+<li><b>academic tenacity</b>, the underlying beliefs and attitudes (such as motivation and aspiration) and accompanying academic behaviors that drive student achievement</li>
+<li><b>college knowledge</b>, the knowledge base and contextual skills that enable students to successfully navigate college once they arrive</li>
 </ul>
-<li>A mechanism that connects indicators at all three levels with a corresponding set of targeted supports or interventions that will move a student, school or district toward postsecondary success.</li>
+<br>
+ <span class="content-bold">Students, Schools, and Systems: A Tri-Level Approach</span> 
+<br>
+Further, CRIS generates and uses data that reflect activities, resources, processes, and outcomes at the student, school, and district levels. This tri-level approach enables districts to support college readiness more comprehensively:                                     
+<ul>
+<li><b>Individual Level:</b>  students’ personal progress toward college readiness (e.g., courses and credits, study skills, persistence, expectations for future, knowledge about college requirements and choices).</li>
+
+<li><b>Setting Level:</b>  the resources and opportunities for students provided by a program, classroom or school (e.g., teachers’ efforts to push students to high levels of academic performance, college-going culture and resources, instructional coherence and rigor).</li>
+<li><b>System Level:</b>  the policy and funding infrastructure that impacts school contexts, student programs and college readiness supports (e.g., district-level resources for school-level counseling, professional development for administrators and teachers on establishing supports for college-going, resources to support data generation).</li>
 </ul>
  <br>
 
-<span class="content-bold">The CRIS Initiative:  Background, Strategies and Activities</span>
+<span class="content-bold">Our Role</span>
 
-<p>The John W. Gardner Center for Youth and Their Communities (Gardner Center) at Stanford University, the Annenberg Institute for School Reform (AISR) at Brown University, and The University of Chicago Consortium on Chicago School Research (UChicago CCSR) are partnering on a three-year initiative funded by the Bill and Melinda Gates Foundation to develop models for College Readiness Indicator Systems (CRIS).  The CRIS initiative involves close collaboration with a small number of selected school districts or school networks across the country—several of which have already been deeply involved in the development and implementation of EWSs. The Gardner Center is developing and studying the implementation of the tri-level CRIS in conjunction with districts, using a flexible, “design-build” approach.  The AISR is focusing on cross-site learning; brokering expertise and supports for districts; understanding issues related to district, municipal, state, and federal contexts; and process documentation.</p>
+<p>As a CRIS initiative partners, Gardner Center researchers developed and studied the implementation of the tri-level CRIS in conjuction with districts, using a flexible, "design-build" approach.</p>
 <br>
 <p>Specifically the Gardner Center supports districts by:<p>
 <br>
@@ -86,10 +90,11 @@
 <li>Helping districts link college readiness indicators to policies and practices to address students’ needs in time to enter college. </li>
 
  </ul>
-<br>
-<p>Each participating district is developing a unique scope of work tailored to its particular needs that will be directly linked to the development of the tri-level system of college readiness indicators.</p>
-<br>
- 
+
+<span class="content-bold">The CRIS Resource Series</span>
+
+Developed by the CRIS research partners, the CRIS Resource Series builds on lessons learned over the course of the three-year initiative and offers guidance to schools and districts that aim to develop and enact effective indicator and support systems. Each resource was created with a particular audience in mind. As such, readers may opt to review the whole series or select only those resources that apply to their particular role or interest. Designed to guide a district through its successful implementaiton of a college readiness indicator system, the six-part CRIS Resource Series will be available for free download on May 1, 2014.
+
 <p>For more information about the College Readiness Indicator Systems initiative, please contact Leslie Patron at <a href="mailto:lpatron@stanford.edu"> lpatron@stanford.edu. </a> </p>         </div>
 
 
