--- a/our_work/content-research.html
+++ b/our_work/content-research.html
@@ -16,12 +16,14 @@
 	   <hr class="short-rule">
 
  <h1 class="content-text-header">B</h1><br>
-   <hr class="short-rule">
+  <ul style="list-style: none;">
+			<li><a href="broadaccess.html">Broad Access Colleges in the San Francisco Bay Area Technology Economy</a></li>
 
            <h1 class="content-text-header">C</h1>
 		<ul style="list-style: none;">
 			<li><a href="alt-ed.html">California Alternative Education Research Project</a></li>
 	<li><a href="core.html">California Office to Reform Education (CORE)</a></li>
+<li><a href="collegeaccess.html">College Access Foundation of California</a></li>
 			<li><a href="cris.html">College Readiness Indicators Systems (CRIS)</a></li>
 			<li><a href="cydi.html">Community Youth Development Initiative (CYDI)</a><li>
 			<li><a href="acad_soc_emo_devt.html">Connecting Academic with Social and Emotional Development</a></li>
