--- a/our_work/content-roadtripnation.html
+++ b/our_work/content-roadtripnation.html
@@ -37,7 +37,7 @@
 
 <br>
 
-<p>Roadtrip Nation as approached the Gardner Center to study the implementation of the program at six San Jose Unified School District (SJUSD) Plus schools. The Plus program, one of the alternative learning options offered by the district, employs a school-within-a-school design to serve students who have grade-level abilities yet have been unsuccessful at the comprehensive high school and thus are credit deficient. The program's goal is for students to graduate with their home high school class. A large proportion of students in the Plus program are economically disadvantaged and face numerous obstacles to their educational success.</p>
+<p>Roadtrip Nation has approached the Gardner Center to study the implementation of the program at six San Jose Unified School District (SJUSD) Plus schools. The Plus program, one of the alternative learning options offered by the district, employs a school-within-a-school design to serve students who have grade-level abilities yet have been unsuccessful at the comprehensive high school and thus are credit deficient. The program's goal is for students to graduate with their home high school class. A large proportion of students in the Plus program are economically disadvantaged and face numerous obstacles to their educational success.</p>
 
 <br>
 
