--- a/our_work/content-okf.html
+++ b/our_work/content-okf.html
@@ -28,11 +28,11 @@
 
 <br>
 
-<p>In order to inform ongoing program improvement and expansion, OKF has contracted the John W. Gardner Center for Youth and Their Communities at Stanford University to study the implementation process of PASS-2 in three Oakland high schools during the 2011-2012 academic year. A few interviews and observations will also be conducted in three additional Oakland high schools (“non-target sites”) to complement the deeper work being done at the primary research sites. </p>
+<p>OKF engaged the John W. Gardner Center for Youth and Their Communities at Stanford University to conduct a year-long implemenation study of PASS-2 in three Oakland high schools during the 2011-2012 academic year. The purpose of the study was to clarify PASS-2's theory of action to understand youth and adult participants' experiences of the program in order to inform efforts to improve, sustain, and scale implementation.</p>
 
 <br>
 
-<p>This research has been designed with the intention of better understanding: (1) the conditions and variables that support and hinder the implementation of PASS-2 in different school settings, and (2) the ways in which students and adults are experiencing PASS-2. The specific questions guiding this study include: </p>
+<p>This study was designed to better understand: (1) the conditions and variables that support and hinder the implementation of PASS-2 in different school settings, and (2) the ways in which students and adults are experiencing PASS-2. The specific questions guiding this study included: </p>
 
 <br>
 
@@ -51,7 +51,9 @@
 </ol>
 
 <br>
-
+<p>Gardner Center researchers collected qualitative data from students, teachers, and administrators in five high schools within Oakland Unified School District; Oakland Kids First staff; and PASS-2 mentor alumni over the course of the 2011-2012 academic year, including hundreds of pages of planning documents, curriculum materials, and samples of student work as well as more than 60 hours of obsrvations, interviews, and focus groups involving over 40 participants. Researchers coded and analyzed data to understand implementation processes and participant experiences within and across schools. They followed with a second phase of analysis that included further queries in order to triagulate preliminary themes and explore conditions that supported and hindered implementation.</p>
+<br>
+<p>The implementation study affirmed some of the elements of PASS-2's preliminary logic model and it also pointed to new elements that may help clarify and strengthen the vision for the work going forward; these were presented in a revised logic model and a discussion of implications for sustaining and scaling PASS-2. One of the most promising findings was the way in which PASS-2 expanded traditional notions of positive youth development to include a social justice framework that embraced contribution as an entry point rather than an end point in efforts to support positive youth development in Oakland's high schools. PASS-2's approach to positive youth development resonates with other efforts both in and beyond Oakland that focus on social and emotional learning, leadership development, college readiness, and meaningful student engagement. This synergy provides Oakland Kids First with a strong foundation from which to develop a thoughtful, evidence-based plan for sustaining and scaling PASS-2.</p>
 
         
 
